--- a/index.html
+++ b/index.html
@@ -8,3 +8,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <style>
+      :root {
+        --primary-blue: #005073;
+        --secondary-blue: #0076a8;
+        --accent-blue: #00a6e0;
+        --dark-gray: #333;
+        --light-gray: #f5f5f5;
+        --white: #fff;
+      }
