--- a/index.html
+++ b/index.html
@@ -17,3 +17,9 @@
         --light-gray: #f5f5f5;
         --white: #fff;
       }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
