--- a/index.html
+++ b/index.html
@@ -23,3 +23,17 @@
         box-sizing: border-box;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
+      body {
+        line-height: 1.6;
+        color: var(--dark-gray);
+      }
+
+      a {
+        text-decoration: none;
+        color: var(--primary-blue);
+      }
+
+      ul {
+        list-style: none;
+      }
+
