--- a/index.html
+++ b/index.html
@@ -51,4 +51,10 @@
         top: 0;
         z-index: 100;
       }
+      .top-bar {
+        background-color: var(--primary-blue);
+        color: var(--white);
+        padding: 8px 0;
+        font-size: 14px;
+      }
 
