--- a/index.html
+++ b/index.html
@@ -57,4 +57,22 @@
         padding: 8px 0;
         font-size: 14px;
       }
+      .top-bar-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .top-links ul {
+        display: flex;
+      }
+
+      .top-links li {
+        margin-left: 20px;
+      }
+
+      .top-links a {
+        color: var(--white);
+      }
+
 
