--- a/index.html
+++ b/index.html
@@ -74,5 +74,21 @@
       .top-links a {
         color: var(--white);
       }
+      .main-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px 0;
+      }
+
+      .logo {
+        font-size: 28px;
+        font-weight: bold;
+        color: var(--primary-blue);
+      }
+
+      .logo span {
+        color: var(--accent-blue);
+      }
 
 
