--- a/index.html
+++ b/index.html
@@ -90,5 +90,22 @@
       .logo span {
         color: var(--accent-blue);
       }
+      nav ul {
+        display: flex;
+      }
+
+      nav li {
+        margin-left: 25px;
+      }
+
+      nav a {
+        color: var(--dark-gray);
+        font-weight: 500;
+        transition: color 0.3s;
+      }
+
+      nav a:hover {
+        color: var(--primary-blue);
+      }
 
 
