--- a/index.html
+++ b/index.html
@@ -107,5 +107,29 @@
       nav a:hover {
         color: var(--primary-blue);
       }
+      .search-cart {
+        display: flex;
+        align-items: center;
+      }
+
+      .search-box {
+        position: relative;
+        margin-right: 20px;
+      }
+
+      .search-box input {
+        padding: 8px 15px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        width: 200px;
+      }
+
+      .search-box i {
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        color: #777;
+      }
 
 
