--- a/index.html
+++ b/index.html
@@ -136,3 +136,10 @@
         font-size: 20px;
         color: var(--dark-gray);
       }
+ /* Hero Section */
+ .hero {
+        background-color: var(--primary-blue);
+        color: var(--white);
+        padding: 80px 0;
+        text-align: center;
+      }
