--- a/index.html
+++ b/index.html
@@ -143,3 +143,13 @@
         padding: 80px 0;
         text-align: center;
       }
+      .hero h1 {
+        font-size: 42px;
+        margin-bottom: 20px;
+      }
+
+      .hero p {
+        font-size: 18px;
+        max-width: 700px;
+        margin: 0 auto 30px;
+      }
