--- a/index.html
+++ b/index.html
@@ -153,3 +153,12 @@
         max-width: 700px;
         margin: 0 auto 30px;
       }
+      .btn {
+        display: inline-block;
+        padding: 12px 30px;
+        background-color: var(--accent-blue);
+        color: var(--white);
+        border-radius: 4px;
+        font-weight: 500;
+        transition: background-color 0.3s;
+      }
