--- a/index.html
+++ b/index.html
@@ -162,3 +162,16 @@
         font-weight: 500;
         transition: background-color 0.3s;
       }
+      .btn:hover {
+        background-color: #008cba;
+      }
+
+      .btn-outline {
+        background-color: transparent;
+        border: 1px solid var(--white);
+        margin-left: 15px;
+      }
+
+      .btn-outline:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+      }
