--- a/index.html
+++ b/index.html
@@ -175,3 +175,24 @@
       .btn-outline:hover {
         background-color: rgba(255, 255, 255, 0.1);
       }
+       /* Solutions Section */
+       .solutions {
+        padding: 60px 0;
+      }
+
+      .section-title {
+        text-align: center;
+        margin-bottom: 40px;
+      }
+
+      .section-title h2 {
+        font-size: 32px;
+        color: var(--primary-blue);
+        margin-bottom: 15px;
+      }
+
+      .section-title p {
+        color: #777;
+        max-width: 700px;
+        margin: 0 auto;
+      }
