--- a/index.html
+++ b/index.html
@@ -209,3 +209,16 @@
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s;
       }
+      .solution-card:hover {
+        transform: translateY(-10px);
+      }
+
+      .solution-img {
+        height: 200px;
+        background-color: var(--light-gray);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--primary-blue);
+        font-size: 50px;
+      }
