--- a/index.html
+++ b/index.html
@@ -222,3 +222,11 @@
         color: var(--primary-blue);
         font-size: 50px;
       }
+      .solution-content {
+        padding: 25px;
+      }
+
+      .solution-content h3 {
+        margin-bottom: 15px;
+        color: var(--primary-blue);
+      }
