--- a/index.html
+++ b/index.html
@@ -230,3 +230,14 @@
         margin-bottom: 15px;
         color: var(--primary-blue);
       }
+       /* Products Section */
+       .products {
+        padding: 60px 0;
+        background-color: var(--light-gray);
+      }
+
+      .product-categories {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
+      }
