--- a/index.html
+++ b/index.html
@@ -241,3 +241,12 @@
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 20px;
       }
+      .category-card {
+        background-color: var(--white);
+        padding: 30px;
+        border-radius: 6px;
+        text-align: center;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
+        transition: box-shadow 0.3s;
+      }
+
