--- a/index.html
+++ b/index.html
@@ -249,4 +249,12 @@
         box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
         transition: box-shadow 0.3s;
       }
+      .category-card:hover {
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      }
 
+      .category-icon {
+        font-size: 40px;
+        color: var(--accent-blue);
+        margin-bottom: 20px;
+      }
