--- a/index.html
+++ b/index.html
@@ -258,3 +258,7 @@
         color: var(--accent-blue);
         margin-bottom: 20px;
       }
+      .category-card h3 {
+        margin-bottom: 15px;
+        color: var(--primary-blue);
+      }
