--- a/index.html
+++ b/index.html
@@ -262,3 +262,16 @@
         margin-bottom: 15px;
         color: var(--primary-blue);
       }
+       /* Partners Section */
+       .partners {
+        padding: 60px 0;
+        text-align: center;
+      }
+
+      .partner-logos {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-top: 40px;
+      }
