--- a/index.html
+++ b/index.html
@@ -275,3 +275,13 @@
         align-items: center;
         margin-top: 40px;
       }
+      .partner-logo {
+        margin: 15px;
+        opacity: 0.7;
+        transition: opacity 0.3s;
+      }
+
+      .partner-logo:hover {
+        opacity: 1;
+      }
+
