--- a/index.html
+++ b/index.html
@@ -284,4 +284,8 @@
       .partner-logo:hover {
         opacity: 1;
       }
+      .partner-logo img {
+        max-height: 60px;
+        max-width: 150px;
+      }
 
