--- a/index.html
+++ b/index.html
@@ -288,4 +288,10 @@
         max-height: 60px;
         max-width: 150px;
       }
+ /* Footer */
+ footer {
+        background-color: var(--dark-gray);
+        color: var(--white);
+        padding: 60px 0 0;
+      }
 
