--- a/index.html
+++ b/index.html
@@ -294,4 +294,16 @@
         color: var(--white);
         padding: 60px 0 0;
       }
+      .footer-content {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 30px;
+        margin-bottom: 40px;
+      }
+
+      .footer-column h3 {
+        color: var(--white);
+        margin-bottom: 20px;
+        font-size: 18px;
+      }
 
