--- a/index.html
+++ b/index.html
@@ -306,4 +306,15 @@
         margin-bottom: 20px;
         font-size: 18px;
       }
+      .footer-column ul li {
+        margin-bottom: 10px;
+      }
 
+      .footer-column a {
+        color: #bbb;
+        transition: color 0.3s;
+      }
+
+      .footer-column a:hover {
+        color: var(--white);
+      }
