--- a/index.html
+++ b/index.html
@@ -318,3 +318,10 @@
       .footer-column a:hover {
         color: var(--white);
       }
+      .footer-bottom {
+        background-color: #222;
+        padding: 20px 0;
+        text-align: center;
+        font-size: 14px;
+        color: #bbb;
+      }
