--- a/index.html
+++ b/index.html
@@ -325,3 +325,24 @@
         font-size: 14px;
         color: #bbb;
       }
+      .social-links {
+        display: flex;
+        margin-top: 20px;
+      }
+
+      .social-links a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 50%;
+        margin-right: 10px;
+        color: var(--white);
+        transition: background-color 0.3s;
+      }
+
+      .social-links a:hover {
+        background-color: var(--accent-blue);
+      }
