--- a/index.html
+++ b/index.html
@@ -346,3 +346,41 @@
       .social-links a:hover {
         background-color: var(--accent-blue);
       }
+ /* Responsive */
+ @media (max-width: 768px) {
+        .main-header {
+          flex-direction: column;
+          padding: 15px 0;
+        }
+
+        .logo {
+          margin-bottom: 15px;
+        }
+
+        nav ul {
+          margin-bottom: 15px;
+        }
+
+        .hero h1 {
+          font-size: 32px;
+        }
+
+        .hero p {
+          font-size: 16px;
+        }
+
+        .btn {
+          display: block;
+          margin: 10px auto;
+          width: 80%;
+        }
+
+        .btn-outline {
+          margin-left: 0;
+        }
+
+        .search-box input {
+          width: 150px;
+        }
+      }
+    </style>
