--- a/index.html
+++ b/index.html
@@ -384,3 +384,42 @@
         }
       }
     </style>
+     </head>
+     <body>
+       <!-- Header -->
+       <header>
+         <div class="top-bar">
+           <div class="container top-bar-content">
+             <div class="contact">Contact Sales: 1-800-NET-CONNECT</div>
+             <div class="top-links">
+               <ul>
+                 <li>
+                   <a href="#"><i class="fas fa-globe"></i> Global</a>
+                 </li>
+                 <li>
+                   <a href="#"><i class="fas fa-user"></i> Sign In</a>
+                 </li>
+               </ul>
+             </div>
+           </div>
+         </div>
+         <div class="container main-header">
+           <div class="logo">NET<span>CONNECT</span></div>
+           <nav>
+             <ul>
+               <li><a href="#">Products</a></li>
+               <li><a href="#">Solutions</a></li>
+               <li><a href="#">Services</a></li>
+               <li><a href="#">Support</a></li>
+               <li><a href="#">Training</a></li>
+             </ul>
+           </nav>
+           <div class="search-cart">
+             <div class="search-box">
+               <input type="text" placeholder="Search..." />
+               <i class="fas fa-search"></i>
+             </div>
+             <a href="#" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
+           </div>
+         </div>
+       </header>
