Modified index.html hero section

--- a/index.html
+++ b/index.html
@@ -423,3 +423,16 @@
            </div>
          </div>
        </header>
+        <!-- Hero Section -->
+    <section class="hero">
+      <div class="container">
+        <h1>Powering the Future of Networking</h1>
+        <p>
+          Discover our cutting-edge networking solutions that help businesses
+          connect, secure, and automate their infrastructure for the digital
+          age.
+        </p>
+        <a href="#" class="btn">Explore Solutions</a>
+        <a href="#" class="btn btn-outline">Contact Sales</a>
+      </div>
+    </section>
