Modified index.html solutions section

--- a/index.html
+++ b/index.html
@@ -436,3 +436,56 @@
         <a href="#" class="btn btn-outline">Contact Sales</a>
       </div>
     </section>
+     <!-- Solutions Section -->
+     <section class="solutions">
+      <div class="container">
+        <div class="section-title">
+          <h2>Enterprise Networking Solutions</h2>
+          <p>
+            Comprehensive networking solutions designed to meet the needs of
+            modern businesses
+          </p>
+        </div>
+        <div class="solution-grid">
+          <div class="solution-card">
+            <div class="solution-img">
+              <i class="fas fa-network-wired"></i>
+            </div>
+            <div class="solution-content">
+              <h3>Switching</h3>
+              <p>
+                Scalable, secure, and reliable switching solutions for every
+                network need.
+              </p>
+              <a href="#">Learn more →</a>
+            </div>
+          </div>
+          <div class="solution-card">
+            <div class="solution-img">
+              <i class="fas fa-wifi"></i>
+            </div>
+            <div class="solution-content">
+              <h3>Wireless</h3>
+              <p>
+                Next-generation wireless solutions for seamless connectivity
+                anywhere.
+              </p>
+              <a href="#">Learn more →</a>
+            </div>
+          </div>
+          <div class="solution-card">
+            <div class="solution-img">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <div class="solution-content">
+              <h3>Security</h3>
+              <p>
+                Comprehensive security solutions to protect your network from
+                threats.
+              </p>
+              <a href="#">Learn more →</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
