Modified index.html products section

--- a/index.html
+++ b/index.html
@@ -489,3 +489,42 @@
         </div>
       </div>
     </section>
+     <!-- Products Section -->
+     <section class="products">
+      <div class="container">
+        <div class="section-title">
+          <h2>Product Categories</h2>
+          <p>Explore our wide range of networking products and solutions</p>
+        </div>
+        <div class="product-categories">
+          <div class="category-card">
+            <div class="category-icon">
+              <i class="fas fa-server"></i>
+            </div>
+            <h3>Data Center</h3>
+            <p>High-performance networking for modern data centers</p>
+          </div>
+          <div class="category-card">
+            <div class="category-icon">
+              <i class="fas fa-cloud"></i>
+            </div>
+            <h3>Cloud Networking</h3>
+            <p>Solutions for hybrid and multi-cloud environments</p>
+          </div>
+          <div class="category-card">
+            <div class="category-icon">
+              <i class="fas fa-robot"></i>
+            </div>
+            <h3>Automation</h3>
+            <p>AI-driven network automation and analytics</p>
+          </div>
+          <div class="category-card">
+            <div class="category-icon">
+              <i class="fas fa-ethernet"></i>
+            </div>
+            <h3>Routing</h3>
+            <p>Advanced routing solutions for any network</p>
+          </div>
+        </div>
+      </div>
+    </section>
