--- a/index.html
+++ b/index.html
@@ -528,3 +528,36 @@
         </div>
       </div>
     </section>
+      <!-- Partners Section -->
+      <section class="partners">
+        <div class="container">
+          <div class="section-title">
+            <h2>Trusted by Industry Leaders</h2>
+            <p>We partner with the best to deliver exceptional solutions</p>
+          </div>
+          <div class="partner-logos">
+            <div class="partner-logo">
+              <img
+                src="https://via.placeholder.com/150x60?text=Microsoft"
+                alt="Microsoft"
+              />
+            </div>
+            <div class="partner-logo">
+              <img
+                src="https://via.placeholder.com/150x60?text=Amazon"
+                alt="Amazon"
+              />
+            </div>
+            <div class="partner-logo">
+              <img
+                src="https://via.placeholder.com/150x60?text=Google"
+                alt="Google"
+              />
+            </div>
+            <div class="partner-logo">
+              <img src="https://via.placeholder.com/150x60?text=IBM" alt="IBM" />
+            </div>
+          </div>
+        </div>
+      </section>
+  
