--- a/index.html
+++ b/index.html
@@ -560,4 +560,72 @@
           </div>
         </div>
       </section>
+        <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-column">
+            <h3>Products</h3>
+            <ul>
+              <li><a href="#">Switches</a></li>
+              <li><a href="#">Routers</a></li>
+              <li><a href="#">Wireless</a></li>
+              <li><a href="#">Security</a></li>
+              <li><a href="#">Data Center</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Solutions</h3>
+            <ul>
+              <li><a href="#">Enterprise</a></li>
+              <li><a href="#">Service Provider</a></li>
+              <li><a href="#">Small Business</a></li>
+              <li><a href="#">Cloud</a></li>
+              <li><a href="#">IoT</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Services</h3>
+            <ul>
+              <li><a href="#">Consulting</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Training</a></li>
+              <li><a href="#">Professional Services</a></li>
+              <li><a href="#">Managed Services</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Company</h3>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Newsroom</a></li>
+              <li><a href="#">Investors</a></li>
+              <li><a href="#">Partners</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h3>Connect With Us</h3>
+            <p>Stay updated with our latest products and news</p>
+            <div class="social-links">
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>
+            &copy; 2023 NetConnect. All rights reserved. |
+            <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> |
+            <a href="#">Cookies</a>
+          </p>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
+<!-- End of HTML Document -->
+<!-- This is a simple HTML template for a networking solutions website. It includes sections for the header, hero, solutions, products, partners, and footer. The CSS styles are included in the head section for easy customization. The layout is responsive and adapts to different screen sizes. -->
   
