Updated index.html Header with Auth State

--- a/index.html
+++ b/index.html
@@ -15,3 +15,28 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
     
 </head>
+<body>
+    <!-- Header with Auth State -->
+    <header id="header">
+        <div class="container header-container">
+            <a href="#" class="logo">
+                NEXUS<i class="fas fa-bolt logo-icon"></i><span>NET</span>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="#solutions">Solutions</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#industries">Industries</a></li>
+                    <li><a href="#resources">Resources</a></li>
+                </ul>
+            </nav>
+            <div class="header-actions">
+                <i class="fas fa-search search-icon"></i>
+                <div id="auth-buttons">
+                    <a href="#" class="cta-button" id="login-btn">Login</a>
+                </div>
+                <i class="fas fa-bars menu-toggle" id="mobile-menu-toggle"></i>
+            </div>
+        </div>
+    </header>
