Updated index.html Mobile menu

--- a/index.html
+++ b/index.html
@@ -40,3 +40,20 @@
             </div>
         </div>
     </header>
+    <!-- Mobile Menu -->
+    <div class="mobile-menu" id="mobile-menu">
+        <div class="mobile-menu-header">
+            <a href="#" class="logo">
+                NEXUS<i class="fas fa-bolt logo-icon"></i><span>NET</span>
+            </a>
+            <i class="fas fa-times close-mobile-menu" id="close-mobile-menu"></i>
+        </div>
+        <ul class="mobile-menu-links">
+            <li><a href="#solutions">Solutions</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#industries">Industries</a></li>
+            <li><a href="#resources">Resources</a></li>
+            <li><a href="#" id="mobile-login-btn">Login</a></li>
+        </ul>
+    </div>
