--- a/index.html
+++ b/index.html
@@ -57,3 +57,26 @@
             <li><a href="#" id="mobile-login-btn">Login</a></li>
         </ul>
     </div>
+<!-- Auth Modals -->
+<div class="modal" id="login-modal">
+    <div class="modal-content">
+        <span class="close-modal" id="close-login">&times;</span>
+        <h2 class="modal-title">Login to Your Account</h2>
+        <div class="form-group">
+            <label for="login-email">Email</label>
+            <input type="email" id="login-email" placeholder="Enter your email">
+            <div class="error-message" id="login-email-error"></div>
+        </div>
+        <div class="form-group">
+            <label for="login-password">Password</label>
+            <input type="password" id="login-password" placeholder="Enter your password">
+            <div class="error-message" id="login-password-error"></div>
+        </div>
+        <div class="form-actions">
+            <button class="btn-primary" id="login-submit">Login</button>
+        </div>
+        <div class="form-toggle">
+            Don't have an account? <a href="#" id="show-signup">Sign up</a>
+        </div>
+    </div>
+</div>
