--- a/index.html
+++ b/index.html
@@ -80,3 +80,12 @@
         </div>
     </div>
 </div>
+<div class="modal" id="signup-modal">
+    <div class="modal-content">
+        <span class="close-modal" id="close-signup">&times;</span>
+        <h2 class="modal-title">Create Your Account</h2>
+        <div class="form-group">
+            <label for="signup-name">Full Name</label>
+            <input type="text" id="signup-name" placeholder="Enter your full name">
+            <div class="error-message" id="signup-name-error"></div>
+        </div>
