--- a/index.html
+++ b/index.html
@@ -89,3 +89,8 @@
             <input type="text" id="signup-name" placeholder="Enter your full name">
             <div class="error-message" id="signup-name-error"></div>
         </div>
+        <div class="form-group">
+            <label for="signup-email">Email</label>
+            <input type="email" id="signup-email" placeholder="Enter your email">
+            <div class="error-message" id="signup-email-error"></div>
+        </div>
