--- a/index.html
+++ b/index.html
@@ -94,3 +94,13 @@
             <input type="email" id="signup-email" placeholder="Enter your email">
             <div class="error-message" id="signup-email-error"></div>
         </div>
+        <div class="form-group">
+            <label for="signup-password">Password</label>
+            <input type="password" id="signup-password" placeholder="Create a password">
+            <div class="error-message" id="signup-password-error"></div>
+        </div>
+        <div class="form-group">
+            <label for="signup-confirm">Confirm Password</label>
+            <input type="password" id="signup-confirm" placeholder="Confirm your password">
+            <div class="error-message" id="signup-confirm-error"></div>
+        </div>
