--- a/index.html
+++ b/index.html
@@ -104,3 +104,11 @@
             <input type="password" id="signup-confirm" placeholder="Confirm your password">
             <div class="error-message" id="signup-confirm-error"></div>
         </div>
+        <div class="form-actions">
+            <button class="btn-primary" id="signup-submit">Create Account</button>
+        </div>
+        <div class="form-toggle">
+            Already have an account? <a href="#" id="show-login">Login</a>
+        </div>
+    </div>
+</div>
