--- a/index.html
+++ b/index.html
@@ -112,3 +112,20 @@
         </div>
     </div>
 </div>
+ <!-- Hero Section -->
+ <section class="hero">
+    <div class="container">
+        <div class="hero-content">
+            <span class="hero-subtitle">Next-Gen Networking</span>
+            <h1 class="hero-title">Quantum-Ready Network Infrastructure</h1>
+            <p class="hero-description">
+                Revolutionize your digital infrastructure with our AI-driven, quantum-secure networking solutions designed for the enterprises of tomorrow.
+            </p>
+            <div class="hero-buttons">
+                <a href="#solutions" class="btn-primary">Explore Solutions</a>
+                <a href="#" class="btn-secondary" id="watch-demo-btn">Watch Demo</a>
+            </div>
+        </div>
+        <img src="https://via.placeholder.com/900x600?text=Network+Visualization" alt="Quantum Network Visualization" class="hero-image">
+    </div>
+</section>
