--- a/index.html
+++ b/index.html
@@ -129,3 +129,13 @@
         <img src="https://via.placeholder.com/900x600?text=Network+Visualization" alt="Quantum Network Visualization" class="hero-image">
     </div>
 </section>
+<!-- Solutions Section -->
+<section class="solutions" id="solutions">
+    <div class="container">
+        <div class="section-header">
+            <span class="section-subtitle">Innovative Solutions</span>
+            <h2 class="section-title">Redefining Network Performance</h2>
+            <p class="section-description">
+                Our cutting-edge solutions combine AI, machine learning, and quantum cryptography to deliver unprecedented network performance and security.
+            </p>
+        </div>
