--- a/index.html
+++ b/index.html
@@ -139,3 +139,16 @@
                 Our cutting-edge solutions combine AI, machine learning, and quantum cryptography to deliver unprecedented network performance and security.
             </p>
         </div>
+        <div class="solutions-grid">
+            <div class="solution-card">
+                <div class="solution-icon">
+                    <i class="fas fa-atom"></i>
+                </div>
+                <div class="solution-content">
+                    <h3 class="solution-title">Quantum Encryption</h3>
+                    <p class="solution-description">
+                        Unbreakable quantum encryption for your most sensitive data transfers and communications.
+                    </p>
+                    <a href="#" class="solution-link">Learn more <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
