--- a/index.html
+++ b/index.html
@@ -152,3 +152,15 @@
                     <a href="#" class="solution-link">Learn more <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
+            <div class="solution-card">
+                <div class="solution-icon">
+                    <i class="fas fa-brain"></i>
+                </div>
+                <div class="solution-content">
+                    <h3 class="solution-title">AI Network Optimization</h3>
+                    <p class="solution-description">
+                        Self-learning networks that continuously optimize performance and predict issues before they occur.
+                    </p>
+                    <a href="#" class="solution-link">Learn more <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
