--- a/index.html
+++ b/index.html
@@ -164,3 +164,18 @@
                     <a href="#" class="solution-link">Learn more <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
+            <div class="solution-card">
+                <div class="solution-icon">
+                    <i class="fas fa-project-diagram"></i>
+                </div>
+                <div class="solution-content">
+                    <h3 class="solution-title">Edge Networking</h3>
+                    <p class="solution-description">
+                        Ultra-low latency edge computing solutions for real-time applications and IoT ecosystems.
+                    </p>
+                    <a href="#" class="solution-link">Learn more <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
