--- a/index.html
+++ b/index.html
@@ -179,3 +179,24 @@
         </div>
     </div>
 </section>
+<!-- Stats Section -->
+<section class="stats">
+    <div class="container stats-container">
+        <div class="stat-item">
+            <div class="stat-number">99.999%</div>
+            <div class="stat-label">Network Uptime</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-number">40ms</div>
+            <div class="stat-label">Global Latency</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-number">256-bit</div>
+            <div class="stat-label">Quantum Encryption</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-number">10,000+</div>
+            <div class="stat-label">Enterprise Clients</div>
+        </div>
+    </div>
+</section>
