--- a/index.html
+++ b/index.html
@@ -200,3 +200,13 @@
         </div>
     </div>
 </section>
+ <!-- Products Section -->
+ <section class="products" id="products">
+    <div class="container">
+        <div class="section-header">
+            <span class="section-subtitle">Our Products</span>
+            <h2 class="section-title">Network Infrastructure Redefined</h2>
+            <p class="section-description">
+                Discover our award-winning hardware and software solutions that are transforming enterprise networking.
+            </p>
+        </div>
