--- a/index.html
+++ b/index.html
@@ -210,3 +210,21 @@
                 Discover our award-winning hardware and software solutions that are transforming enterprise networking.
             </p>
         </div>
+        <div class="products-grid">
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="product-badge">New</span>
+                    <img src="https://via.placeholder.com/300x200?text=Quantum+Router" alt="Quantum Router">
+                </div>
+                <div class="product-content">
+                    <div class="product-category">Hardware</div>
+                    <h3 class="product-title">QuantumCore Router</h3>
+                    <p class="product-description">
+                        The world's first quantum-secure router with AI-driven traffic optimization and threat detection.
+                    </p>
+                    <div class="product-footer">
+                        <div class="product-price">$12,499</div>
+                        <a href="#" class="product-button">View Details</a>
+                    </div>
+                </div>
+            </div>
