--- a/index.html
+++ b/index.html
@@ -228,3 +228,19 @@
                     </div>
                 </div>
             </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="https://via.placeholder.com/300x200?text=AI+Switch" alt="AI Switch">
+                </div>
+                <div class="product-content">
+                    <div class="product-category">Hardware</div>
+                    <h3 class="product-title">NeuralSwitch X9000</h3>
+                    <p class="product-description">
+                        Cognitive switching fabric that learns and adapts to your network patterns in real-time.
+                    </p>
+                    <div class="product-footer">
+                        <div class="product-price">$8,999</div>
+                        <a href="#" class="product-button">View Details</a>
+                    </div>
+                </div>
+            </div>
