--- a/index.html
+++ b/index.html
@@ -244,3 +244,19 @@
                     </div>
                 </div>
             </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="https://via.placeholder.com/300x200?text=Security+Suite" alt="Security Suite">
+                </div>
+                <div class="product-content">
+                    <div class="product-category">Software</div>
+                    <h3 class="product-title">ZeroTrust Security Suite</h3>
+                    <p class="product-description">
+                        Comprehensive network security platform with continuous authentication and microsegmentation.
+                    </p>
+                    <div class="product-footer">
+                        <div class="product-price">$4,999/yr</div>
+                        <a href="#" class="product-button">View Details</a>
+                    </div>
+                </div>
+            </div>
