--- a/index.html
+++ b/index.html
@@ -260,3 +260,23 @@
                     </div>
                 </div>
             </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="product-badge">Best Seller</span>
+                    <img src="https://via.placeholder.com/300x200?text=Network+OS" alt="Network OS">
+                </div>
+                <div class="product-content">
+                    <div class="product-category">Software</div>
+                    <h3 class="product-title">NexusOS</h3>
+                    <p class="product-description">
+                        The most advanced network operating system with built-in AI and machine learning capabilities.
+                    </p>
+                    <div class="product-footer">
+                        <div class="product-price">$3,499/yr</div>
+                        <a href="#" class="product-button">View Details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
