--- a/index.html
+++ b/index.html
@@ -280,3 +280,13 @@
         </div>
     </div>
 </section>
+<!-- Partners Section -->
+<section class="partners">
+    <div class="container">
+        <div class="section-header">
+            <span class="section-subtitle">Our Partners</span>
+            <h2 class="section-title">Trusted by Global Leaders</h2>
+            <p class="section-description">
+                We collaborate with the world's most innovative companies to deliver exceptional networking solutions.
+            </p>
+        </div>
