--- a/index.html
+++ b/index.html
@@ -290,3 +290,22 @@
                 We collaborate with the world's most innovative companies to deliver exceptional networking solutions.
             </p>
         </div>
+        <div class="partners-grid">
+            <div class="partner-logo">
+                <img src="https://via.placeholder.com/150x60?text=Microsoft" alt="Microsoft">
+            </div>
+            <div class="partner-logo">
+                <img src="https://via.placeholder.com/150x60?text=Google" alt="Google">
+            </div>
+            <div class="partner-logo">
+                <img src="https://via.placeholder.com/150x60?text=Amazon" alt="Amazon">
+            </div>
+            <div class="partner-logo">
+                <img src="https://via.placeholder.com/150x60?text=IBM" alt="IBM">
+            </div>
+            <div class="partner-logo">
+                <img src="https://via.placeholder.com/150x60?text=Intel" alt="Intel">
+            </div>
+        </div>
+    </div>
+</section>
