--- a/index.html
+++ b/index.html
@@ -309,3 +309,16 @@
         </div>
     </div>
 </section>
+ <!-- CTA Section -->
+ <section class="cta">
+    <div class="container cta-container">
+        <h2 class="cta-title">Ready to Transform Your Network?</h2>
+        <p class="cta-description">
+            Schedule a consultation with our quantum networking experts and discover how we can future-proof your infrastructure.
+        </p>
+        <div class="cta-buttons">
+            <a href="#" class="btn-primary" id="cta-get-started">Get Started</a>
+            <a href="#" class="btn-secondary" id="cta-contact-sales">Contact Sales</a>
+        </div>
+    </div>
+</section>
