--- a/index.html
+++ b/index.html
@@ -322,3 +322,14 @@
         </div>
     </div>
 </section>
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="footer-grid">
+            <div class="footer-col">
+                <a href="#" class="footer-logo">
+                    NEXUS<i class="fas fa-bolt logo-icon"></i><span>NET</span>
+                </a>
+                <p class="footer-about">
+                    Leading the quantum networking revolution with cutting-edge solutions for the enterprises of tomorrow.
+                </p>
