--- a/index.html
+++ b/index.html
@@ -333,3 +333,10 @@
                 <p class="footer-about">
                     Leading the quantum networking revolution with cutting-edge solutions for the enterprises of tomorrow.
                 </p>
+                <div class="footer-social">
+                    <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
