--- a/index.html
+++ b/index.html
@@ -340,3 +340,13 @@
                     <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
+            <div class="footer-col">
+                <h3 class="footer-title">Solutions</h3>
+                <ul class="footer-links">
+                    <li><a href="#">Quantum Security</a></li>
+                    <li><a href="#">AI Networking</a></li>
+                    <li><a href="#">Edge Computing</a></li>
+                    <li><a href="#">Cloud Networking</a></li>
+                    <li><a href="#">IoT Infrastructure</a></li>
+                </ul>
+            </div>
