--- a/index.html
+++ b/index.html
@@ -350,3 +350,13 @@
                     <li><a href="#">IoT Infrastructure</a></li>
                 </ul>
             </div>
+            <div class="footer-col">
+                <h3 class="footer-title">Products</h3>
+                <ul class="footer-links">
+                    <li><a href="#">Routers</a></li>
+                    <li><a href="#">Switches</a></li>
+                    <li><a href="#">Security</a></li>
+                    <li><a href="#">Software</a></li>
+                    <li><a href="#">Management</a></li>
+                </ul>
+            </div>
