--- a/index.html
+++ b/index.html
@@ -360,3 +360,13 @@
                     <li><a href="#">Management</a></li>
                 </ul>
             </div>
+            <div class="footer-col">
+                <h3 class="footer-title">Company</h3>
+                <ul class="footer-links">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Leadership</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Newsroom</a></li>
+                    <li><a href="#">Investors</a></li>
+                </ul>
+            </div>
