--- a/index.html
+++ b/index.html
@@ -370,3 +370,14 @@
                     <li><a href="#">Investors</a></li>
                 </ul>
             </div>
+            <div class="footer-col">
+                <h3 class="footer-title">Newsletter</h3>
+                <div class="footer-newsletter">
+                    <input type="email" id="newsletter-email" placeholder="Your email address">
+                    <button id="newsletter-submit">Subscribe</button>
+                </div>
+                <p style="opacity: 0.7; font-size: 0.85rem; margin-top: 1rem;">
+                    Get the latest quantum networking insights and updates.
+                </p>
+            </div>
+        </div>
