--- a/index.html
+++ b/index.html
@@ -381,3 +381,8 @@
                 </p>
             </div>
         </div>
+        <div class="footer-bottom">
+            <p>&copy; 2023 NexusNet. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a> | <a href="#">Cookies</a></p>
+        </div>
+    </div>
+</footer>
