--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script.js">
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
@@ -123,10 +124,10 @@
             </p>
             <div class="hero-buttons">
                 <a href="#solutions" class="btn-primary">Explore Solutions</a>
-                <a href="#" class="btn-secondary" id="watch-demo-btn">Watch Demo</a>
+                <a href="https://youtu.be/DRGT5ZgGrEc" class="btn-secondary" id="watch-demo-btn">Watch Demo</a>
             </div>
         </div>
-        <img src="https://via.placeholder.com/900x600?text=Network+Visualization" alt="Quantum Network Visualization" class="hero-image">
+        
     </div>
 </section>
 <!-- Solutions Section -->
