--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="script.js">
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
@@ -20,7 +19,7 @@
     <!-- Header with Auth State -->
     <header id="header">
         <div class="container header-container">
-            <a href="#" class="logo">
+            <a href="" class="logo">
                 NEXUS<i class="fas fa-bolt logo-icon"></i><span>NET</span>
             </a>
             <nav>
@@ -387,3 +386,8 @@
         </div>
     </div>
 </footer>
+<!-- Scripts -->
+   
+<script src="script.js"></script>
+</body>
+</html>
