--- a/index.html
+++ b/index.html
@@ -280,6 +280,20 @@
         </div>
     </div>
 </section>
+<!-- Services Section -->
+<section class="services" id="services">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-subtitle">Our Expertise</span>
+        <h2 class="section-title">Comprehensive Network Services</h2>
+        <p class="section-description">
+          End-to-end professional services to design, implement, and optimize your network infrastructure.
+        </p>
+      </div>
+      
+  <!-- Industries Section -->
+   <!-- Industries Section -->
+
 <!-- Partners Section -->
 <section class="partners">
     <div class="container">
