--- a/index.html
+++ b/index.html
@@ -290,7 +290,12 @@
           End-to-end professional services to design, implement, and optimize your network infrastructure.
         </p>
       </div>
-      
+      <div class="services-grid">
+        <!-- Service 1 -->
+        <div class="service-card">
+          <div class="service-icon">
+            <i class="fas fa-network-wired"></i>
+          </div>
   <!-- Industries Section -->
    <!-- Industries Section -->
 
