--- a/index.html
+++ b/index.html
@@ -296,6 +296,11 @@
           <div class="service-icon">
             <i class="fas fa-network-wired"></i>
           </div>
+          <div class="service-content">
+            <h3 class="service-title">Network Design & Architecture</h3>
+            <p class="service-description">
+              Custom network solutions tailored to your business requirements with future-proof architecture.
+            </p>
   <!-- Industries Section -->
    <!-- Industries Section -->
 
