--- a/index.html
+++ b/index.html
@@ -301,6 +301,15 @@
             <p class="service-description">
               Custom network solutions tailored to your business requirements with future-proof architecture.
             </p>
+            <ul class="service-features">
+                <li><i class="fas fa-check-circle"></i> Scalable topology design</li>
+                <li><i class="fas fa-check-circle"></i> Security-first approach</li>
+                <li><i class="fas fa-check-circle"></i> Performance optimization</li>
+              </ul>
+              <a href="#" class="service-link">Learn more <i class="fas fa-arrow-right"></i></a>
+            </div>
+          </div>
+          
   <!-- Industries Section -->
    <!-- Industries Section -->
 
