--- a/index.html
+++ b/index.html
@@ -309,7 +309,11 @@
               <a href="#" class="service-link">Learn more <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
-          
+         <!-- Service 2 -->
+         <div class="service-card">
+            <div class="service-icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>  
   <!-- Industries Section -->
    <!-- Industries Section -->
 
