--- a/index.html
+++ b/index.html
@@ -313,7 +313,12 @@
          <div class="service-card">
             <div class="service-icon">
               <i class="fas fa-shield-alt"></i>
-            </div>  
+            </div>
+            <div class="service-content">
+                <h3 class="service-title">Security Implementation</h3>
+                <p class="service-description">
+                  Comprehensive security services to protect your network from evolving threats.
+                </p>  
   <!-- Industries Section -->
    <!-- Industries Section -->
 
