--- a/index.html
+++ b/index.html
@@ -318,7 +318,16 @@
                 <h3 class="service-title">Security Implementation</h3>
                 <p class="service-description">
                   Comprehensive security services to protect your network from evolving threats.
-                </p>  
+                </p>
+                <ul class="service-features">
+                    <li><i class="fas fa-check-circle"></i> Firewall configuration</li>
+                    <li><i class="fas fa-check-circle"></i> Intrusion prevention</li>
+                    <li><i class="fas fa-check-circle"></i> Vulnerability assessment</li>
+                  </ul>
+                  <a href="#" class="service-link">Learn more <i class="fas fa-arrow-right"></i></a>
+                </div>
+              </div>
+                
   <!-- Industries Section -->
    <!-- Industries Section -->
 
