--- a/index.html
+++ b/index.html
@@ -327,7 +327,11 @@
                   <a href="#" class="service-link">Learn more <i class="fas fa-arrow-right"></i></a>
                 </div>
               </div>
-                
+         <!-- Service 3 -->
+         <div class="service-card">
+            <div class="service-icon">
+              <i class="fas fa-cloud"></i>
+            </div>        
   <!-- Industries Section -->
    <!-- Industries Section -->
 
