--- a/index.html
+++ b/index.html
@@ -331,7 +331,12 @@
          <div class="service-card">
             <div class="service-icon">
               <i class="fas fa-cloud"></i>
-            </div>        
+            </div>
+            <div class="service-content">
+                <h3 class="service-title">Cloud Integration</h3>
+                <p class="service-description">
+                  Seamless hybrid and multi-cloud networking solutions for modern enterprises.
+                </p>        
   <!-- Industries Section -->
    <!-- Industries Section -->
 
