--- a/index.html
+++ b/index.html
@@ -336,7 +336,15 @@
                 <h3 class="service-title">Cloud Integration</h3>
                 <p class="service-description">
                   Seamless hybrid and multi-cloud networking solutions for modern enterprises.
-                </p>        
+                </p>
+                <ul class="service-features">
+                    <li><i class="fas fa-check-circle"></i> Cloud migration</li>
+                    <li><i class="fas fa-check-circle"></i> SD-WAN implementation</li>
+                    <li><i class="fas fa-check-circle"></i> Multi-cloud connectivity</li>
+                  </ul>
+                  <a href="#" class="service-link">Learn more <i class="fas fa-arrow-right"></i></a>
+                </div>
+              </div>        
   <!-- Industries Section -->
    <!-- Industries Section -->
 
