--- a/index.html
+++ b/index.html
@@ -344,7 +344,12 @@
                   </ul>
                   <a href="#" class="service-link">Learn more <i class="fas fa-arrow-right"></i></a>
                 </div>
-              </div>        
+              </div>
+               <!-- Service 4 -->
+        <div class="service-card">
+            <div class="service-icon">
+              <i class="fas fa-headset"></i>
+            </div>        
   <!-- Industries Section -->
    <!-- Industries Section -->
 
