--- a/index.html
+++ b/index.html
@@ -349,7 +349,12 @@
         <div class="service-card">
             <div class="service-icon">
               <i class="fas fa-headset"></i>
-            </div>        
+            </div>
+            <div class="service-content">
+                <h3 class="service-title">Managed Services</h3>
+                <p class="service-description">
+                  24/7 monitoring, maintenance, and support for your network infrastructure.
+                </p>        
   <!-- Industries Section -->
    <!-- Industries Section -->
 
