--- a/index.html
+++ b/index.html
@@ -354,7 +354,16 @@
                 <h3 class="service-title">Managed Services</h3>
                 <p class="service-description">
                   24/7 monitoring, maintenance, and support for your network infrastructure.
-                </p>        
+                </p>
+                <ul class="service-features">
+                    <li><i class="fas fa-check-circle"></i> Proactive monitoring</li>
+                    <li><i class="fas fa-check-circle"></i> SLA-backed support</li>
+                    <li><i class="fas fa-check-circle"></i> Performance reporting</li>
+                  </ul>
+                  <a href="#" class="service-link">Learn more <i class="fas fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>        
   <!-- Industries Section -->
    <!-- Industries Section -->
 
