--- a/index.html
+++ b/index.html
@@ -363,7 +363,13 @@
                   <a href="#" class="service-link">Learn more <i class="fas fa-arrow-right"></i></a>
                 </div>
               </div>
-            </div>        
+            </div>
+            <div class="services-cta">
+                <p>Need a custom solution? Our experts can help design the perfect network for your business.</p>
+                <a href="#contact" class="btn-primary">Consult Our Team</a>
+              </div>
+            </div>
+          </section>        
   <!-- Industries Section -->
    <!-- Industries Section -->
 
