--- a/index.html
+++ b/index.html
@@ -371,7 +371,16 @@
             </div>
           </section>        
   <!-- Industries Section -->
-   <!-- Industries Section -->
+  <section class="industries" id="industries">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-subtitle">Industry Solutions</span>
+        <h2 class="section-title">Tailored for Your Sector</h2>
+        <p class="section-description">
+          Specialized networking solutions designed to meet the unique challenges of your industry.
+        </p>
+      </div>
+
 
 <!-- Partners Section -->
 <section class="partners">
