--- a/index.html
+++ b/index.html
@@ -380,6 +380,12 @@
           Specialized networking solutions designed to meet the unique challenges of your industry.
         </p>
       </div>
+      <div class="industries-grid">
+        <!-- Healthcare -->
+        <div class="industry-card">
+          <div class="industry-icon">
+            <i class="fas fa-hospital"></i>
+          </div>
 
 
 <!-- Partners Section -->
