--- a/index.html
+++ b/index.html
@@ -386,6 +386,14 @@
           <div class="industry-icon">
             <i class="fas fa-hospital"></i>
           </div>
+          <div class="industry-content">
+            <h3>Healthcare</h3>
+            <p>HIPAA-compliant networks for hospitals and clinics with medical IoT integration.</p>
+            <div class="industry-badges">
+              <span>HIPAA</span>
+              <span>IoT</span>
+              <span>Low Latency</span>
+            </div>
 
 
 <!-- Partners Section -->
