--- a/index.html
+++ b/index.html
@@ -394,6 +394,8 @@
               <span>IoT</span>
               <span>Low Latency</span>
             </div>
+        </div>
+    </div>
 
 
 <!-- Partners Section -->
