--- a/index.html
+++ b/index.html
@@ -396,6 +396,11 @@
             </div>
         </div>
     </div>
+     <!-- Finance -->
+     <div class="industry-card">
+        <div class="industry-icon">
+          <i class="fas fa-chart-line"></i>
+        </div>
 
 
 <!-- Partners Section -->
