--- a/index.html
+++ b/index.html
@@ -401,6 +401,16 @@
         <div class="industry-icon">
           <i class="fas fa-chart-line"></i>
         </div>
+        <div class="industry-content">
+            <h3>Finance</h3>
+            <p>High-frequency trading networks with military-grade encryption and ultra-low latency.</p>
+            <div class="industry-badges">
+              <span>PCI DSS</span>
+              <span>Ultra-Low Latency</span>
+              <span>256-bit Encryption</span>
+            </div>
+          </div>
+        </div>
 
 
 <!-- Partners Section -->
