--- a/index.html
+++ b/index.html
@@ -411,6 +411,11 @@
             </div>
           </div>
         </div>
+          <!-- Education -->
+          <div class="industry-card">
+            <div class="industry-icon">
+              <i class="fas fa-graduation-cap"></i>
+            </div>
 
 
 <!-- Partners Section -->
