--- a/index.html
+++ b/index.html
@@ -416,6 +416,16 @@
             <div class="industry-icon">
               <i class="fas fa-graduation-cap"></i>
             </div>
+            <div class="industry-content">
+                <h3>Education</h3>
+                <p>Scalable campus networks with content filtering and high-density WiFi solutions.</p>
+                <div class="industry-badges">
+                  <span>CIPA</span>
+                  <span>High-Density</span>
+                  <span>E-Rate</span>
+                </div>
+              </div>
+            </div>
 
 
 <!-- Partners Section -->
