--- a/index.html
+++ b/index.html
@@ -426,6 +426,11 @@
                 </div>
               </div>
             </div>
+             <!-- Manufacturing -->
+        <div class="industry-card">
+            <div class="industry-icon">
+              <i class="fas fa-industry"></i>
+            </div>
 
 
 <!-- Partners Section -->
