--- a/index.html
+++ b/index.html
@@ -431,6 +431,16 @@
             <div class="industry-icon">
               <i class="fas fa-industry"></i>
             </div>
+            <div class="industry-content">
+                <h3>Manufacturing</h3>
+                <p>Industrial IoT networks with real-time monitoring and predictive maintenance.</p>
+                <div class="industry-badges">
+                  <span>IIoT</span>
+                  <span>5G</span>
+                  <span>Edge Computing</span>
+                </div>
+              </div>
+            </div>
 
 
 <!-- Partners Section -->
