--- a/index.html
+++ b/index.html
@@ -441,6 +441,11 @@
                 </div>
               </div>
             </div>
+              <!-- Government -->
+        <div class="industry-card">
+            <div class="industry-icon">
+              <i class="fas fa-landmark"></i>
+            </div>
 
 
 <!-- Partners Section -->
